# libopc

./: CMakeLists.txt  config.h
mce/: helper.c  helper.h  textreader.c  textreader.h  textwriter.c  textwriter.h
opc/: config.h  container.c  container.h  file.c  file.h  helper.c  helper.h  inputstream.h  internal.h  opc.h  outputstream.h  part.c  part.h  properties.c  properties.h  relation.c  relation.h  xmlreader.c  xmlreader.h  xmlwriter.c  xmlwriter.h  zip.c  zip.h
opc++/: container.cpp  container.hpp  opc.cpp  opc.hpp
opc/mce/: helper.c  helper.h  textreader.c  textreader.h  textwriter.c  textwriter.h
sample/: CMakeLists.txt  mce_extract.c  mce_read.c  mce_schema.c  mce_write.c  mcepp.c  opc_album.c  opc_changes.c  opc_dump.c  opc_extract.c  opc_generate.c  opc_helloworld.c  opc_image.c  opc_mem.c  opc_part.c  opc_proc.c  opc_properties.c  opc_relation.c  opc_text.c  opc_trim.c  opc_type.c  opc_xml.c  opc_xml2.c  opc_zipextract.c  opc_zipread.c  opc_zipwrite.c
sample++/: CMakeLists.txt  opc_dump.cpp
